Fix premature termination of scroll animations while selecting text.

During text selection, AutoscrollController calls scrollIntoView continuously
to make the scroll position follow the selection.  This had the side effect of
resetting ScrollAnimator before it could finish a main-thread smooth scroll.

There are early returns for zero-delta scrolls in FrameView::setScrollPosition
and RootFrameViewport::distributeScrollBetweenViewports, but scrollIntoView's
conversion of fractional scroll offsets to LayoutUnits resulted in a very small
(< 1px) non-zero scroll delta.

We now avoid this by directly comparing the input and output of getRectToExpose
and skipping the unneeded calls to setScrollPosition.

BUG=591918

Review URL: https://codereview.chromium.org/1775213002

Cr-Commit-Position: refs/heads/master@{#380162}

Former-commit-id: 67a7b9d7646d67829d2991376cef8462ff4c6071